[gd_scene load_steps=5 format=3 uid="uid://bvh434qqaok0m"]

[ext_resource type="Script" path="res://src/scripts/abilities/NinjaStar.gd" id="1_10lvo"]
[ext_resource type="Texture2D" uid="uid://40xk6rj3y4yl" path="res://icon.svg" id="2_bexoe"]
[ext_resource type="Script" path="res://src/scripts/abilities/ninjaStarTest.gd" id="3_0wxpp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8vt1"]
size = Vector2(23.625, 24.5625)

[node name="NinjaStar" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_10lvo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5.96046e-08, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_bexoe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g8vt1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ThrowRange" type="Timer" parent="."]
process_callback = 0
one_shot = true
autostart = true

[node name="ninjaStarTest" type="Node2D" parent="."]
script = ExtResource("3_0wxpp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ThrowRange" to="." method="_on_throw_range_timeout"]
